--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\Deyan Peychev\Downloads\Icons\images_VAQ_icon.ico,0
+IconResource=C:\Users\Deyan Peychev\Downloads\Icons\59713591_multicolored_flat_icon_of_blind_man_with_cane_wYb_icon.ico,0
 [ViewState]
 Mode=
 Vid=
